# parakram_best

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PARAKRAM_UNIFIED_VISION_AND_MIGRATION_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
.agents/skills/testing-parakram-e2e/: SKILL.md
.github/workflows/: android.yml  ci-deploy.yml  ci.yml  deploy.yml  release.yml
ai/codelm/: README.md  config.py  main.py  sources.md
ai/codelm/embedding/: index.py  trainer.py
ai/codelm/firmware/: composer.py  (+1 more)
android/: README.md  debug.keystore.base64  gradle.properties  metadata.json
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/vidyuthlabs-app/: .gitignore  build.gradle.kts  keystore.properties.example  settings.gradle.kts
backend/: .env.example  .env.production.sample  Cargo.toml  Dockerfile  cloudbuild.yaml
backend/migrations/: 001_init.sql
backend/src/: email.rs  main.rs  metrics.rs  notifications.rs  rate_limit.rs
backend/src/api/: assets.rs  auth.rs  billing.rs  codelm.rs  configurator.rs  devices.rs  fleet.rs  ir.rs  issues.rs  llm.rs  marketplace.rs  mod.rs  notifications.rs  ota.rs  project_mgmt.rs  projects.rs  provisioning.rs  ros.rs  system.rs  telemetry_ws.rs  templates.rs  users.rs
backend/src/billing/: mod.rs  plans.rs  quota.rs
backend/src/compiler/: bytecode.rs  constant_pool.rs  emitter.rs  indexer.rs  mod.rs  signer.rs
backend/src/db/: mod.rs  models.rs
backend/src/db/migrations/: 0003_billing.sql  0004_marketplace.sql  0005_users.sql  0006_password_reset.sql  0007_push_tokens.sql  0008_email_verification.sql  0009_user_llm_key.sql
backend/src/drivers/: boards.rs  mod.rs  registry.rs
backend/src/ir/: builder.rs  mod.rs  types.rs  validator.rs
backend/src/llm/: client.rs  mod.rs  prompt.rs
backend/src/marketplace/: db.rs  mod.rs  validator.rs
backend/src/ros_graph/: classifier.rs  composer.rs  launcher.rs  mod.rs  templates.rs
backend/tests/: Makefile  integration_test.sh
deploy/: README.md
deploy/aws/: ecs-task.json
deploy/azure/: container_app.bicep
deploy/kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  podmonitor.yaml  secret.example.yaml  service.yaml
desktop/: build_sidecar.py  index.html  package.json
desktop/app/: index.html  package-lock.json  package.json  vite.config.ts
desktop/app/src-tauri/: Cargo.toml  tauri.conf.json
desktop/app/src-tauri/src/: lib.rs
desktop/frontend/: package-lock.json  package.json
desktop/services/: Modelfile.v2  benchmark_model.py  main.py  requirements.txt  test_e2e.py  test_pipeline.py
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: README.md  agents.md  contributing.md  index.md
docs/android/: AI_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  HARDWARE_INTEGRATION.md
docs/architecture/: ai_pipeline.md  compiler.md  firmware.md
docs/artifacts/: 01_architecture_diagram.md  02_firmware_source_tree.md  03_ir_json_schema.json  04_bytecode_isa.md  05_driver_abi_and_samples.md  06_backend_api.yaml  07_llm_system_prompt.md  08_android_architecture.md  09_security_implementation.md  10_end_to_end_trace.md
docs/desktop/: api-reference.md  architecture.md  boards.md  deployment.md  extensions.md  faq.md  getting-started.md
docs/getting_started/: flasher.md  setup.md
firmware/: CMakeLists.txt  FLASHING.md  diagram.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.qemu  sdkconfig.old  wokwi.toml
firmware/main/: CMakeLists.txt  app_main.c  boot_manifest.c  device_config.c  idf_component.yml  ota_manager.c
firmware/main/comms/: ble_gatt_profile.c  dumbdisplay_srv.c  mqtt_client.c  wifi_mgr.c
firmware/main/drivers/: driver_registry.c  drv_adxl345.c  drv_aht20.c  drv_apds9960.c  drv_bh1750.c  drv_ble_ota.c  drv_bme280.c  drv_bmp280.c  drv_bt_a2dp.c  drv_buzzer.c  drv_ccs811.c  drv_cst816s.c  drv_dht22.c  drv_drv8833.c  drv_ds18b20.c  drv_dumbdisplay.c  drv_ens160.c  drv_fan_pwm.c  drv_ft6236.c  drv_hcsr04.c  drv_hts221.c  drv_http_ota.c  drv_hx711.c  drv_i2c_scanner.c  drv_ili9341.c  drv_ina219.c  drv_inmp441.c  drv_lcd_i2c.c  drv_lis3dh.c  drv_lps22hb.c  drv_max30102.c  drv_max6675.c  drv_max98357a.c  drv_mcp9808.c  drv_mfrc522.c  drv_mlx90614.c  drv_mosfet.c  drv_motor_dc.c  drv_motor_stepper.c  drv_mpu6050.c  (+32 more)
firmware/main/include/: ble_crypto.h  board_auth.h  boot_manifest.h  comms.h  device_config.h  driver_abi.h  driver_registry.h  dumbdisplay_srv.h  event_bus.h  lua_sandbox.h  ota_manager.h  payload_verify.h  safety.h  scheduler.h  state_store.h  system_config.h  vm.h
firmware/main/runtime/: event_bus.c  scheduler.c  state_store.c  vm.c
firmware/main/safety/: fault_handler.c  rate_limiter.c  watchdog.c
firmware/main/scripting/: lua_sandbox.c
firmware/main/security/: ble_crypto.c  board_auth.c  device_identity.c  payload_verify.c
firmware/scripts/: qemu_test.sh  wokwi_test.sh
firmware/test_harness/: Makefile  e2e_test.c  esp_err.h  esp_log.h  esp_mock.h  esp_timer.h  mock_subsystems.c  vm_test.c
ios/: project.yml
ios/Parakram/: Info.plist  ParakramApp.swift
landing/: index.html
nginx/: nginx.conf  nginx.prod.conf
prometheus/: prometheus.yml
ros2_ws/src/parakram_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/parakram_msgs/msg/: ActuatorCommand.msg  BytecodePayload.msg  DeviceStatus.msg  DriverEvent.msg  HardwareManifest.msg  SensorReading.msg  TelemetryFrame.msg
ros2_ws/src/parakram_msgs/srv/: CompileIR.srv  FlashFirmware.srv  QueryDrivers.srv
rtos/: Cargo.toml  README.md
rtos/avr/: affinity.rs
rtos/benchmarks/: benchmark.sh
rtos/patents/: full_25claims.md  novelty_report.md
rtos/proofs/: formal.sp
rtos/riscv/: affinity.rs
rtos/src/: Cargo.toml  kyber.rs  novelty_quantum.rs
rtos/src/src/: lib.rs
rtos/stm32/: affinity.rs
rtos/tests/: borrow.rs
scripts/: clone_oss_deps.sh  deploy-gcp.sh
server/: voice_assistant_server.py
shared/protocols/: README.md  openapi.yaml
tests/: integration_test.sh  test_all.sh
(+581 files in other folders)
