[package]
name = "parakram-backend"
version = "1.0.0"
edition = "2021"
authors = ["Vidyuthlabs <engineering@vidyuthlabs.com>"]
description = "Parakram local backend — IR validation, bytecode compilation, LLM integration"
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono", "json"] }

# HTTP client (for LLM API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Cryptography
ring = "0.17"
base64 = "0.22"

# JSON Schema validation
jsonschema = "0.18"

# Auth
jsonwebtoken = "9"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CRC
crc32fast = "1"

# Hex encoding
hex = "0.4"

# Misc
sha2 = "0.10"
rand = "0.8"
dotenvy = "0.15"
lazy_static = "1"
image = "0.25.10"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
