[package]
name = "parakram"
version = "1.0.0"
description = "Parakram — AI Firmware Studio by Vidyutlabs"
authors = ["Vidyutlabs"]
license = "MIT"
repository = "https://github.com/vidyutlabs/parakram"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
